--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
     font-family: dinNormal;
     color: rgb(50, 50, 50);
     letter-spacing: -2px;
+    font-weight: 400;
 }
 
 h2 {
@@ -35,6 +36,7 @@ h2 {
     font-family: dinUltralight;
     color: rgb(102, 102, 102);
     letter-spacing: -2px;
+    font-weight: 200;
 }
 
 h3 {
@@ -45,6 +47,7 @@ h3 {
     font-family: dinLight;
     color: rgb(102, 102, 102);
     letter-spacing: -1px;
+    font-weight: 300;
 }
 
 h4 {
@@ -55,6 +58,7 @@ h4 {
     font-family: dinNormal;
     color: rgb(50, 50, 50);
     letter-spacing: -0.25px;
+    font-weight: 400;
 }
 
 h5 {
@@ -65,6 +69,7 @@ h5 {
     font-family: dinNormal;
     color: rgb(50, 50, 50);
     letter-spacing: -0.3px;
+    font-weight: 400;
 }
 
 h6 {
@@ -75,6 +80,7 @@ h6 {
     font-family: dinNormal;
     color: rgb(102, 102, 102);
     letter-spacing: -0.1px;
+    font-weight: 400;
 }
 
 p {
@@ -123,12 +129,18 @@ body {
         padding: 8px;
     }
 
+        .nav-home-btn-img {
+            height: 32px;
+            width: 32px;
+        }
+
 .hero {
     height: 75vh;
     width: 100vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 256px 0px 256px 0px;
 }
 
     .header-container {
