--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ img {
     grid-template-rows: auto auto auto;
     grid-row-gap: 8px;
     justify-content: center;
-    align-content: start;
+    align-content: center;
 }
 
 /* ---------- Article Page Elements ---------- */
